--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Main Content Section -->
     <main>
         <center>
-            <h1><i><b>Zomato</b></i></h1>
+            <h1><i><b>Swiggy</b></i></h1>
             <h2>Discover the Best Food & Drinks in <b>Aurangabad</b></h2>
             <form action="#" method="GET">
                 <input type="text" placeholder="Search for restaurants, cuisines..." aria-label="Search restaurants">
